# flutter-embedded-linux

./: .clang-format  .gitignore  AUTHORS  BUILDING-CORE-EMBEDDER.md  BUILDING-ENGINE-EMBEDDER.md  CMakeLists.txt  CONTRIBUTING.md  DEBUGGING.md  LICENSE  README.md
.github/workflows/: build-test.yml
cmake/: build.cmake  cross-toolchain-aarch64-template.cmake  cross-toolchain-aarch64-yocto-template.cmake  cross-toolchain.cmake  generate_wayland_protocols.cmake  install.cmake  package.cmake  rapidjson.cmake
doc/: README.md  building-engine-embedder.md  debugging.md
examples/: README.md
examples/config/: weston.ini
examples/flutter-drm-backend/: README.md  main.cc
examples/flutter-drm-backend/cmake/: user_build.cmake  user_config.cmake
examples/flutter-drm-eglstream-backend/: README.md  flutter_window.cc  main.cc
examples/flutter-drm-eglstream-backend/cmake/: user_build.cmake  user_config.cmake
examples/flutter-drm-gbm-backend/: README.md  command_options.h  flutter_embedder_options.h  flutter_window.cc  generated_plugin_registrant.cc  main.cc
examples/flutter-drm-gbm-backend/cmake/: user_build.cmake  user_config.cmake
examples/flutter-eglstream-backend/: README.md
examples/flutter-eglstream-backend/cmake/: user_build.cmake  user_config.cmake
examples/flutter-external-texture-plugin/: README.md  command_options.h  external_texture_test_plugin.cc  external_texture_test_plugin.h  flutter_window.cc  generated_plugin_registrant.cc  main.cc
examples/flutter-external-texture-plugin/cmake/: user_build.cmake  user_config.cmake
examples/flutter-external-texture-plugin/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
examples/flutter-external-texture-plugin/flutter/plugins/external_texture_test/elinux/: CMakeLists.txt  external_texture_test_plugin.cc
examples/flutter-external-texture-plugin/flutter/plugins/external_texture_test/elinux/include/external_texture_test/: external_texture_test_plugin.h
examples/flutter-video-player-plugin/: README.md  flutter_embedder_options.h  main.cc
examples/flutter-video-player-plugin/cmake/: user_build.cmake  user_config.cmake
examples/flutter-video-player-plugin/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
examples/flutter-video-player-plugin/flutter/plugins/video_player/elinux/: CMakeLists.txt  gst_video_player.cc  gst_video_player.h  video_player_plugin.cc  video_player_stream_handler.h  video_player_stream_handler_impl.h
examples/flutter-video-player-plugin/flutter/plugins/video_player/elinux/include/video_player/: video_player_plugin.h
examples/flutter-video-player-plugin/flutter/plugins/video_player/elinux/messages/: create_message.h  looping_message.h  messages.h  mix_with_others_message.h  playback_speed_message.h  position_message.h  texture_message.h  volume_message.h
examples/flutter-wayland-client/: README.md  command_options.h  flutter_embedder_options.h  main.cc
examples/flutter-wayland-client/cmake/: user_build.cmake  user_config.cmake
examples/flutter-weston-desktop-shell/: README.md  main.cc
examples/flutter-weston-desktop-shell-virtual-keyboard/: README.md  flutter_window.h  main.cc
examples/flutter-weston-desktop-shell-virtual-keyboard/cmake/: user_build.cmake  user_config.cmake
examples/flutter-weston-desktop-shell/cmake/: user_build.cmake  user_config.cmake
examples/flutter-weston-desktop-shell/flutter/: generated_plugins.cmake
examples/flutter-x11-client/: README.md  command_options.h  flutter_embedder_options.h  main.cc
examples/flutter-x11-client/cmake/: user_build.cmake  user_config.cmake
examples/flutter-x11-client/flutter/: generated_plugins.cmake
meta-flutter/: README.md
meta-flutter/classes/: embedded-linux.bbclass
meta-flutter/conf/: layer.conf
meta-flutter/recipes-flutter/embedded-linux/: flutter-client_git.bb  flutter-drm-backend_git.bb
meta-flutter/recipes-flutter/engine/: flutter-engine_git.bb
meta-flutter/recipes-graphics/flutter-embedded-linux/: dependency.inc  flutter-client.bb  flutter-drm-eglstream-backend.bb  flutter-drm-gbm-backend.bb  flutter-embedded-linux.inc  flutter-wayland-client.bb  repository.inc  tasks.inc
meta-flutter/recipes-graphics/flutter-engine/: flutter-engine.bb  gn-args-utils.inc  gn-utils.inc
src/client_wrapper/: flutter_view_controller.cc
src/client_wrapper/include/flutter/: dart_project.h  flutter_engine.h  flutter_view.h  flutter_view_controller.h
src/flutter/shell/platform/common/: json_method_codec.cc  text_range.h
src/flutter/shell/platform/linux_embedded/: external_texture.h  external_texture_egl_image.cc  external_texture_egl_image.h  external_texture_gl.cc  external_texture_gl.h  external_texture_pixelbuffer.cc  external_texture_pixelbuffer.h  flutter_elinux.cc  flutter_elinux_engine.cc  flutter_elinux_engine.h  flutter_elinux_state.h  flutter_elinux_texture_registrar.cc  flutter_elinux_texture_registrar.h  flutter_elinux_view.cc  logger.cc  (+20 more)
src/templates/app/: CMakeLists.txt  CMakeLists.txt.tmpl
src/templates/app/common/: command_options.h
src/templates/app/flutter/: CMakeLists.txt
src/templates/app/linux-drm/: main.cc
src/templates/app/linux-wayland/: command_options.h  main.cc
src/templates/app/linux-wayland-weston-desktop-shell/: main.cc
src/templates/app/linux-x11/: main.cc
src/templates/app/runner/: CMakeLists.txt  command_options.h
src/templates/app/runner_wayland/: main.cc
src/templates/app/runner_wayland-weston-desktop-shell/: main.cc
src/wayland/protocol/: text-input-unstable-v1-client-protocol.h  weston-desktop-shell-protocol.c
(+157 files in other folders)
